--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMN3RvdA+Ayc+dS0Etdc25l",
+      "authorship_tag": "ABX9TyNcoZZTuyZB1DD47smIHjL5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,16 +34,16 @@
         "colab": {}
       },
       "source": [
-        "#import pandas as pd\n",
+        "import pandas as pd\n",
         "\n",
         "import numpy as np\n",
         "\n",
-        "#import matplotlib.pyplot as plt\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
         "#from tensorflow import keras\n",
         "\n",
         "#from tensorflow.keras import layers\n",
-        "\n",
+        "from keras.layers import Layer\n",
         "from keras.models import Sequential\n",
         "from keras.layers import LSTM\n",
         "from keras.layers import Dense\n",
@@ -1835,7 +1835,128 @@
         "WW = np.concatenate((W09, W10, W11, W12, W13, W16, W18, W19, W21), axis=0)\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G0yCsb4hHoGV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a9991f8f-fd41-4cce-84b9-e34b8ce8b10c"
+      },
+      "source": [
+        "RR.shape"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(204, 24)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xcs8a7IhHwJy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 899
+        },
+        "outputId": "3cad7e5b-c216-4d66-e06f-87ea64fe2b68"
+      },
+      "source": [
+        "RR.reshape((RR.shape[0],RR.shape[1],1))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[2.00000e+03],\n",
+              "        [2.00000e+03],\n",
+              "        [2.98200e+02],\n",
+              "        ...,\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05]],\n",
+              "\n",
+              "       [[2.00000e+03],\n",
+              "        [2.00000e+03],\n",
+              "        [2.00000e+03],\n",
+              "        ...,\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05]],\n",
+              "\n",
+              "       [[2.00000e+03],\n",
+              "        [2.00000e+03],\n",
+              "        [2.00000e+03],\n",
+              "        ...,\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05]],\n",
+              "\n",
+              "       ...,\n",
+              "\n",
+              "       [[1.00400e+02],\n",
+              "        [5.06000e+01],\n",
+              "        [6.26000e+01],\n",
+              "        ...,\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05]],\n",
+              "\n",
+              "       [[7.21000e+01],\n",
+              "        [5.06000e+01],\n",
+              "        [4.91000e+01],\n",
+              "        ...,\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05]],\n",
+              "\n",
+              "       [[2.00000e+03],\n",
+              "        [1.41230e+03],\n",
+              "        [1.61490e+03],\n",
+              "        ...,\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05],\n",
+              "        [7.77777e+05]]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KXhVbAeOH41W",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "RR"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1845,9 +1966,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 242
+          "height": 91
         },
-        "outputId": "54b91cbe-ce49-42aa-ab99-50bafd916ef0"
+        "outputId": "0c5efa50-4ded-4c99-cca7-64ba384fa51c"
       },
       "source": [
         "#\n",
@@ -1855,54 +1976,116 @@
         "#\n",
         "# # Model / data parameters\n",
         "#\n",
-        "\n",
-        "# choose a number of time steps\n",
-        "n_steps = 24\n",
+        "from keras.layers import RepeatVector\n",
+        "from keras.layers import TimeDistributed\n",
         "# reshape from [samples, timesteps] into [samples, timesteps,features]\n",
         "n_features = 1\n",
         "\n",
         "X=RR\n",
         "y=FF\n",
+        "n_steps_in, n_steps_out = 24, 24\n",
         "\n",
         "X = X.reshape((X.shape[0], X.shape[1], n_features))\n",
         "# define model\n",
         "model = Sequential()\n",
-        "model.add(LSTM(50, activation='relu', input_shape=(n_steps,n_features)))\n",
-        "model.add(Dense(1))\n",
+        "model.add(LSTM(200, activation='relu', input_shape=(n_steps_in, n_features)))\n",
+        "model.add(RepeatVector(n_steps_out))\n",
+        "model.add(LSTM(200, activation='relu', return_sequences=True))\n",
+        "model.add(TimeDistributed(Dense(n_features)))\n",
         "model.compile(optimizer='adam', loss='mse')\n",
         "# fit model\n",
         "model.fit(X, y, epochs=200, verbose=0)\n"
       ],
-      "execution_count": 1,
+      "execution_count": 31,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-972b03728b3f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mX\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mRR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFF\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'RR' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:Layer lstm_12 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "WARNING:tensorflow:Layer lstm_13 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f9fddb2dd30>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A7zUERus544M",
+        "id": "XI9JYgunLE7M",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# demonstrate prediction\n",
-        "x_input = X[0]\n",
-        "yhat = model.predict(x_input, verbose=0)\n",
-        "print(yhat)"
+        ""
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A7zUERus544M",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 467
+        },
+        "outputId": "023f405d-a53e-4382-e619-2065a4b5eedf"
+      },
+      "source": [
+        "# demonstrate prediction\n",
+        "x_input = X[:1]\n",
+        "x_input.reshape((1,24,1))\n",
+        "print(x_input.shape)\n",
+        "yhat = model.predict(x_input, verbose=0)\n",
+        "print(yhat)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(1, 24, 1)\n",
+            "[[[-1.3681003e+05]\n",
+            "  [-4.0444184e+04]\n",
+            "  [-4.2706177e+01]\n",
+            "  [ 5.0536949e+04]\n",
+            "  [ 9.8266875e+04]\n",
+            "  [ 1.5237064e+05]\n",
+            "  [ 2.1076388e+05]\n",
+            "  [ 1.8249933e+05]\n",
+            "  [ 2.4521586e+05]\n",
+            "  [ 3.4645628e+05]\n",
+            "  [ 4.5933053e+05]\n",
+            "  [ 5.6227362e+05]\n",
+            "  [ 6.5260669e+05]\n",
+            "  [ 7.3211481e+05]\n",
+            "  [ 7.9002369e+05]\n",
+            "  [ 8.3460812e+05]\n",
+            "  [ 8.7016225e+05]\n",
+            "  [ 8.9948212e+05]\n",
+            "  [ 9.2315681e+05]\n",
+            "  [ 9.4119700e+05]\n",
+            "  [ 9.5301269e+05]\n",
+            "  [ 9.5906638e+05]\n",
+            "  [ 9.6097162e+05]\n",
+            "  [ 9.5714300e+05]]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
