--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNcoZZTuyZB1DD47smIHjL5",
+      "authorship_tag": "ABX9TyMw7FAf5a/ip9QFylR/xz/L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1966,9 +1966,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 91
+          "height": 145
         },
-        "outputId": "0c5efa50-4ded-4c99-cca7-64ba384fa51c"
+        "outputId": "3737d181-3ae4-4628-ce2c-3ae88f81cb05"
       },
       "source": [
         "#\n",
@@ -1978,6 +1978,7 @@
         "#\n",
         "from keras.layers import RepeatVector\n",
         "from keras.layers import TimeDistributed\n",
+        "from keras.layers import Bidirectional\n",
         "# reshape from [samples, timesteps] into [samples, timesteps,features]\n",
         "n_features = 1\n",
         "\n",
@@ -1988,35 +1989,29 @@
         "X = X.reshape((X.shape[0], X.shape[1], n_features))\n",
         "# define model\n",
         "model = Sequential()\n",
-        "model.add(LSTM(200, activation='relu', input_shape=(n_steps_in, n_features)))\n",
+        "model.add(Bidirectional(LSTM(500, activation='relu', input_shape=(n_steps_in, n_features))))\n",
         "model.add(RepeatVector(n_steps_out))\n",
-        "model.add(LSTM(200, activation='relu', return_sequences=True))\n",
+        "model.add(Bidirectional(LSTM(500, activation='relu', return_sequences=True)))\n",
         "model.add(TimeDistributed(Dense(n_features)))\n",
         "model.compile(optimizer='adam', loss='mse')\n",
+        "\n",
         "# fit model\n",
-        "model.fit(X, y, epochs=200, verbose=0)\n"
+        "model.fit(X, y, epochs=200, verbose=0)\n",
+        "model.summary()\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:Layer lstm_12 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
-            "WARNING:tensorflow:Layer lstm_13 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n"
+            "WARNING:tensorflow:Layer lstm_18 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "WARNING:tensorflow:Layer lstm_18 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "WARNING:tensorflow:Layer lstm_18 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "WARNING:tensorflow:Layer lstm_19 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "WARNING:tensorflow:Layer lstm_19 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "WARNING:tensorflow:Layer lstm_19 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f9fddb2dd30>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
         }
       ]
     },
@@ -2042,7 +2037,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 467
         },
-        "outputId": "023f405d-a53e-4382-e619-2065a4b5eedf"
+        "outputId": "005e3493-3eed-4e99-d1a7-3af5507bec0c"
       },
       "source": [
         "# demonstrate prediction\n",
@@ -2052,36 +2047,36 @@
         "yhat = model.predict(x_input, verbose=0)\n",
         "print(yhat)"
       ],
-      "execution_count": 37,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "(1, 24, 1)\n",
-            "[[[-1.3681003e+05]\n",
-            "  [-4.0444184e+04]\n",
-            "  [-4.2706177e+01]\n",
-            "  [ 5.0536949e+04]\n",
-            "  [ 9.8266875e+04]\n",
-            "  [ 1.5237064e+05]\n",
-            "  [ 2.1076388e+05]\n",
-            "  [ 1.8249933e+05]\n",
-            "  [ 2.4521586e+05]\n",
-            "  [ 3.4645628e+05]\n",
-            "  [ 4.5933053e+05]\n",
-            "  [ 5.6227362e+05]\n",
-            "  [ 6.5260669e+05]\n",
-            "  [ 7.3211481e+05]\n",
-            "  [ 7.9002369e+05]\n",
-            "  [ 8.3460812e+05]\n",
-            "  [ 8.7016225e+05]\n",
-            "  [ 8.9948212e+05]\n",
-            "  [ 9.2315681e+05]\n",
-            "  [ 9.4119700e+05]\n",
-            "  [ 9.5301269e+05]\n",
-            "  [ 9.5906638e+05]\n",
-            "  [ 9.6097162e+05]\n",
-            "  [ 9.5714300e+05]]]\n"
+            "[[[ -26744.725 ]\n",
+            "  [   1792.7821]\n",
+            "  [  -3220.1504]\n",
+            "  [  -6764.162 ]\n",
+            "  [ 142093.72  ]\n",
+            "  [ -11330.961 ]\n",
+            "  [  49483.4   ]\n",
+            "  [ 110977.305 ]\n",
+            "  [ 209669.7   ]\n",
+            "  [ 365150.5   ]\n",
+            "  [ 364783.7   ]\n",
+            "  [ 372907.2   ]\n",
+            "  [ 381446.2   ]\n",
+            "  [ 494810.7   ]\n",
+            "  [ 609997.7   ]\n",
+            "  [ 649187.25  ]\n",
+            "  [ 514388.5   ]\n",
+            "  [ 582014.7   ]\n",
+            "  [ 782513.3   ]\n",
+            "  [ 667925.25  ]\n",
+            "  [ 774508.3   ]\n",
+            "  [ 955985.06  ]\n",
+            "  [ 664519.1   ]\n",
+            "  [1077454.6   ]]]\n"
           ],
           "name": "stdout"
         }
