--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMw7FAf5a/ip9QFylR/xz/L",
+      "authorship_tag": "ABX9TyMQpDRrj31COxwdRTwppkbj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1835,7 +1835,7 @@
         "WW = np.concatenate((W09, W10, W11, W12, W13, W16, W18, W19, W21), axis=0)\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -1847,12 +1847,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a9991f8f-fd41-4cce-84b9-e34b8ce8b10c"
+        "outputId": "22e4f52a-c339-460a-df20-01a71f767b47"
       },
       "source": [
         "RR.shape"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1864,7 +1864,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 2
         }
       ]
     },
@@ -1882,7 +1882,7 @@
       "source": [
         "RR.reshape((RR.shape[0],RR.shape[1],1))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1966,9 +1966,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 379
         },
-        "outputId": "3737d181-3ae4-4628-ce2c-3ae88f81cb05"
+        "outputId": "76a618e3-ce2b-4a91-a5a1-fc820b63b30e"
       },
       "source": [
         "#\n",
@@ -1976,42 +1976,79 @@
         "#\n",
         "# # Model / data parameters\n",
         "#\n",
+        "import tensorflow as tf\n",
         "from keras.layers import RepeatVector\n",
         "from keras.layers import TimeDistributed\n",
-        "from keras.layers import Bidirectional\n",
         "# reshape from [samples, timesteps] into [samples, timesteps,features]\n",
-        "n_features = 1\n",
+        "# YOUR CODE STARTS HERE\n",
+        "class myCallback(tf.keras.callbacks.Callback):\n",
+        "  def on_epoch_end(self, epoch, logs={}):\n",
+        "    if(logs.get('accuracy')>0.998):\n",
+        "      print(\"\\nReached 99.8% accuracy so cancelling training!\")\n",
+        "      self.model.stop_training = True\n",
+        "# YOUR CODE ENDS HERE\n",
         "\n",
-        "X=RR\n",
-        "y=FF\n",
+        "callbacks = myCallback()\n",
+        "\n",
+        "n_features = 2\n",
+        "\n",
+        "re=np.stack((RR, VV))\n",
+        "re=re.reshape(204,24,2)\n",
+        "\n",
+        "X=re\n",
+        "y=np.stack((FF,WW))\n",
+        "y=y.reshape(204,24,2)\n",
         "n_steps_in, n_steps_out = 24, 24\n",
         "\n",
-        "X = X.reshape((X.shape[0], X.shape[1], n_features))\n",
+        "#X = X.reshape((X.shape[0], X.shape[1], n_features))\n",
         "# define model\n",
         "model = Sequential()\n",
-        "model.add(Bidirectional(LSTM(500, activation='relu', input_shape=(n_steps_in, n_features))))\n",
+        "model.add(LSTM(2000, activation='relu', input_shape=(n_steps_in, n_features)))\n",
         "model.add(RepeatVector(n_steps_out))\n",
-        "model.add(Bidirectional(LSTM(500, activation='relu', return_sequences=True)))\n",
+        "model.add(LSTM(2000, activation='relu', return_sequences=True))\n",
         "model.add(TimeDistributed(Dense(n_features)))\n",
-        "model.compile(optimizer='adam', loss='mse')\n",
-        "\n",
+        "model.compile(optimizer='adam', loss='mse', metrics=['accuracy'])\n",
+        "model.summary()\n",
         "# fit model\n",
-        "model.fit(X, y, epochs=200, verbose=0)\n",
-        "model.summary()\n"
+        "model.fit(X, y, validation_split=0.2, epochs=200, batch_size=20, verbose=0, callbacks=[callbacks])\n"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:Layer lstm_18 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
-            "WARNING:tensorflow:Layer lstm_18 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
-            "WARNING:tensorflow:Layer lstm_18 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
-            "WARNING:tensorflow:Layer lstm_19 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
-            "WARNING:tensorflow:Layer lstm_19 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
-            "WARNING:tensorflow:Layer lstm_19 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n"
+            "WARNING:tensorflow:Layer lstm_14 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "WARNING:tensorflow:Layer lstm_15 will not use cuDNN kernel since it doesn't meet the cuDNN kernel criteria. It will use generic GPU kernel as fallback when running on GPU\n",
+            "Model: \"sequential_7\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "lstm_14 (LSTM)               (None, 2000)              16024000  \n",
+            "_________________________________________________________________\n",
+            "repeat_vector_7 (RepeatVecto (None, 24, 2000)          0         \n",
+            "_________________________________________________________________\n",
+            "lstm_15 (LSTM)               (None, 24, 2000)          32008000  \n",
+            "_________________________________________________________________\n",
+            "time_distributed_7 (TimeDist (None, 24, 2)             4002      \n",
+            "=================================================================\n",
+            "Total params: 48,036,002\n",
+            "Trainable params: 48,036,002\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fd08e172fd0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
         }
       ]
     },
@@ -2035,48 +2072,45 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 449
         },
-        "outputId": "005e3493-3eed-4e99-d1a7-3af5507bec0c"
+        "outputId": "93ccdba0-8302-4a67-a6ff-f0780d048b65"
       },
       "source": [
         "# demonstrate prediction\n",
         "x_input = X[:1]\n",
-        "x_input.reshape((1,24,1))\n",
-        "print(x_input.shape)\n",
         "yhat = model.predict(x_input, verbose=0)\n",
         "print(yhat)"
       ],
-      "execution_count": 39,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(1, 24, 1)\n",
-            "[[[ -26744.725 ]\n",
-            "  [   1792.7821]\n",
-            "  [  -3220.1504]\n",
-            "  [  -6764.162 ]\n",
-            "  [ 142093.72  ]\n",
-            "  [ -11330.961 ]\n",
-            "  [  49483.4   ]\n",
-            "  [ 110977.305 ]\n",
-            "  [ 209669.7   ]\n",
-            "  [ 365150.5   ]\n",
-            "  [ 364783.7   ]\n",
-            "  [ 372907.2   ]\n",
-            "  [ 381446.2   ]\n",
-            "  [ 494810.7   ]\n",
-            "  [ 609997.7   ]\n",
-            "  [ 649187.25  ]\n",
-            "  [ 514388.5   ]\n",
-            "  [ 582014.7   ]\n",
-            "  [ 782513.3   ]\n",
-            "  [ 667925.25  ]\n",
-            "  [ 774508.3   ]\n",
-            "  [ 955985.06  ]\n",
-            "  [ 664519.1   ]\n",
-            "  [1077454.6   ]]]\n"
+            "[[[nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]\n",
+            "  [nan nan]]]\n"
           ],
           "name": "stdout"
         }
@@ -2090,6 +2124,20 @@
         "colab": {}
       },
       "source": [
+        "re=np.stack((RR, VV))\n",
+        "re=re.reshape(204,24,2)"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3rsc4YYv6Aeq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": null,
@@ -2099,6 +2147,170 @@
       "cell_type": "code",
       "metadata": {
         "id": "w4oAP_tp3-v5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rv=np.stack((r, v))"
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f_hIFJ8y2J8l",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rv=rv.T"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "itYcNJV71V1Y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a586fc88-f6cb-49db-90ed-12d4a6974c4a"
+      },
+      "source": [
+        "rv[1]"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2000. ,    7.7])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h8CDGkiy391t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 449
+        },
+        "outputId": "12b87346-e549-48eb-a348-ee5c3be44246"
+      },
+      "source": [
+        "re=rv.reshape(204,24,2)\n",
+        "re[1]"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2.00000000e+03, 1.41256086e+01],\n",
+              "       [2.00000000e+03, 1.26415531e+01],\n",
+              "       [2.00000000e+03, 1.01717381e+01],\n",
+              "       [2.00000000e+03, 8.96932814e+00],\n",
+              "       [2.00000000e+03, 7.90774099e+00],\n",
+              "       [2.00000000e+03, 7.62609542e+00],\n",
+              "       [2.00000000e+03, 7.84274586e+00],\n",
+              "       [2.00000000e+03, 8.76351022e+00],\n",
+              "       [2.00000000e+03, 1.09516796e+01],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KFlAPY7y5vIo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ojnbRJLn5a8t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 233
+        },
+        "outputId": "9fe10def-eafd-41da-d207-9c385e64eae7"
+      },
+      "source": [
+        "re[1]"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2.00000000e+03, 1.41256086e+01, 2.00000000e+03, 1.26415531e+01,\n",
+              "        2.00000000e+03, 1.01717381e+01, 2.00000000e+03, 8.96932814e+00,\n",
+              "        2.00000000e+03, 7.90774099e+00, 2.00000000e+03, 7.62609542e+00,\n",
+              "        2.00000000e+03, 7.84274586e+00, 2.00000000e+03, 8.76351022e+00,\n",
+              "        2.00000000e+03, 1.09516796e+01, 7.77777000e+05, 7.77777000e+05,\n",
+              "        7.77777000e+05, 7.77777000e+05, 7.77777000e+05, 7.77777000e+05],\n",
+              "       [7.77777000e+05, 7.77777000e+05, 7.77777000e+05, 7.77777000e+05,\n",
+              "        7.77777000e+05, 7.77777000e+05, 7.77777000e+05, 7.77777000e+05,\n",
+              "        7.77777000e+05, 7.77777000e+05, 7.77777000e+05, 7.77777000e+05,\n",
+              "        7.77777000e+05, 7.77777000e+05, 7.77777000e+05, 7.77777000e+05,\n",
+              "        7.77777000e+05, 7.77777000e+05, 7.77777000e+05, 7.77777000e+05,\n",
+              "        7.77777000e+05, 7.77777000e+05, 7.77777000e+05, 7.77777000e+05]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BPmnEzdP5eYY",
         "colab_type": "code",
         "colab": {}
       },
